@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import bookface.logic.commands.CommandTestUtil;
 import bookface.model.BookFace;
 import bookface.model.book.Book;
 import bookface.model.person.Person;
@@ -16,19 +15,12 @@ import bookface.model.person.Person;
  */
 public class TypicalBooks {
 
-    public static final Book HOWTOSPELL = new BookBuilder().withTitle("How to Spell")
+    public static final Book HOW_TO_SPELL = new BookBuilder().withTitle("How to Spell")
             .withAuthor("Ronald Johnson").build();
-    public static final Book MAKINGACOMPUTER = new BookBuilder().withTitle("Making a Computer")
+    public static final Book MAKING_A_COMPUTER = new BookBuilder().withTitle("Making a Computer")
             .withAuthor("Roger Smith").build();
-    public static final Book GETMOTIVATED = new BookBuilder().withTitle("Get Motivated")
+    public static final Book GET_MOTIVATED = new BookBuilder().withTitle("Get Motivated")
             .withAuthor("Lim Chee Teck").build();
-
-
-    // Manually added - Book's details found in {@code CommandTestUtil}
-    public static final Book HowToSpell = new BookBuilder().withTitle(CommandTestUtil.VALID_TITLE_HOW)
-            .withAuthor(CommandTestUtil.VALID_AUTHOR_RONALD).build();
-    public static final Book MakingAComputer = new BookBuilder().withTitle(CommandTestUtil.VALID_TITLE_MAKING)
-            .withAuthor(CommandTestUtil.VALID_AUTHOR_ROGER).build();
 
     private TypicalBooks() {} // prevents instantiation
 
@@ -47,10 +39,10 @@ public class TypicalBooks {
     }
 
     public static List<Book> getTypicalBooks() {
-        return new ArrayList<>(Arrays.asList(HOWTOSPELL, MAKINGACOMPUTER, GETMOTIVATED));
+        return new ArrayList<>(Arrays.asList(HOW_TO_SPELL, MAKING_A_COMPUTER, GET_MOTIVATED));
     }
 
     public static List<Book> getSingleBook() {
-        return new ArrayList<>(Arrays.asList(HOWTOSPELL));
+        return new ArrayList<>(List.of(HOW_TO_SPELL));
     }
 }
